# nlv-news-summarizer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.json
.claude/: settings.local.json
bot/: app.py  article.py  config.py  gdrive.py  summarizer.py
